[package]
name = "simple_rust_cpu_raytracer"
version = "0.1.0"
authors = ["Bjarke Pedersen <contact@bjarke.io>"]
edition = "2018"

[dependencies]
minifb = "*"
rgb = "*"
rand = "*"
cgmath = "*"
rayon = "*"
ordered-float = "*"
time = "*"
either = "*"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
