[package]
name = "simple_rust_cpu_raytracer"
version = "0.1.0"
authors = ["Bjarke Pedersen <contact@bjarke.io>"]
edition = "2018"

[dependencies]
minifb = "0.19.3"
rgb = "0.8.27"
rand = "0.8.4"
cgmath = "0.18.0"
rayon = "1.5.1"
ordered-float = "2.7.0"
time = "0.3.1"
either = "1.6.1"

# [profile.release]
# opt-level = 3
# debug = false
# lto = true
# codegen-units = 1
